--- a/public/main.css
+++ b/public/main.css
@@ -3,16 +3,19 @@ body {margin: 0;
         }
 
 #chat{
-position:absolute;
-top:15px;
-right:15px;
+position:fixed;
+width: 98%;
+left: 10px;
+bottom: 0px;
 }
 
 #content{
 color:white;
-width: 500px; 
-height: 300px; 
+height: 150px;
 margin: 0 0 20px 0;
  border: solid 1px #999; 
  overflow-y: scroll;
+ font-family: sans-serif;
+ font-size: 15px;
+ padding: 10px;
 }
